<resources>
    <string name="app_name">SSUgaeting</string>
    <string name="register">회원가입</string>
    <string name="search_id">아이디 찾기</string>
    <string name="search_pw">비밀번호 찾기</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="filter_info">정보 필터</string>

    <!-- User Information -->
    <!-- Essential Input List -->
    <string name="user_id">아이디</string>
    <string name="user_password">비밀번호</string>
    <string name="user_sex">성별</string>
    <string name="user_email">대학 이메일</string>
    <!-- Additional Input List -->
    <string name="user_name">닉네임</string>
    <string name="user_age">나이</string>
    <string name="user_address">주소</string>
    <string name="user_hobby">취미</string>
    <string name="user_college">대학</string>
    <string name="user_major">전공</string>
    <string name="user_height">키</string>
    <string name="user_state_message">상태메시지</string>
    <string name="user_religion">종교</string>
    <string name="user_circle">동아리</string>
    <string name="user_abroad_experience">유학경험</string>
    <string name="user_military_status">군필유무</string>
    <!-- User Information -->

    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <!-- Test Chatting Message -->
    <string name="chat_message">채팅 메시지</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
